--- a/GoIT/html/homework/hw3/css/style.css
+++ b/GoIT/html/homework/hw3/css/style.css
@@ -36,7 +36,7 @@ body {
 	color: white;
 	background-color: #585858;
 }
-.punkt_top_menu:active {
+.punkt_top_menu:hover {
 	width: 96px;
 	background-color: #464646;
     border-left: solid;
@@ -70,7 +70,7 @@ body {
     background-color: white;
     font-size: 15px;
 }
-.punkt_left_menu:active {
+.punkt_left_menu:hover {
 	padding-left: 30px;
 	padding-top: 12px;
 	width: 210px;
@@ -93,7 +93,7 @@ body {
 }
 /*BOT MENU*/
 .bot_menu {
-	-moz-user-select: -moz-none;
+    -moz-user-select: -moz-none;
     -o-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
@@ -122,4 +122,6 @@ body {
 	height: 30px;
 	background-color: #e1e1e1;
 }
+.punkt_bot_menu:hover {
+	text-decoration: underline; 
 
