--- a/GoIT/html/homework/hw5part1/css/style.css
+++ b/GoIT/html/homework/hw5part1/css/style.css
@@ -1,5 +1,18 @@
-* {
-	font-family: "Helvetica Neue";
+/*CLEARFIX*/
+.clearfix{
+  *zoom: 1;
+}
+.clearfix:before{
+  content: '';
+  display: table;
+}
+.clearfix:after{
+  content: '';
+  display: table;
+  clear: both;
+}
+body {
+	font-family: "Helvetica Neue", Tahoma;
 }
 .top_menu{
 	position: relative;
@@ -7,7 +20,7 @@
 	background-image: url(../img/background_top.png);
 }
 .top_menu ul {
-	margin-left: 467px;
+	margin-left: 560px;
 }
 .top_menu li{
 	display: inline-block;
@@ -79,11 +92,11 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 .second_container img{
-	margin-left: 142px;
+	margin-left: 145px;
 	margin-top: 30px;
 }
 .form_punkt {
-	width: 276px;
+	width: 265px;
     height: 35px;
     font-size: 14px;
     font-family: "Helvetica Neue", Tahoma;
@@ -135,4 +148,38 @@
 	color: white;
 	font-size: 12px;
 	font-family: "Helvetica Neue", Tahoma;
+}
+.facebook {
+	display: inline-block;
+	width: 270px;
+	height: 35px;
+	margin-top: 35px;
+	margin-left: 150px;
+	background-color: #37518e;
+	border-radius: 5px;
+	border-top: 1px outset #7789b7;
+}
+.f {
+	display: inline-block;
+	float: left;
+	height: 35px;
+	width: 40px;
+	border-right: 2px groove #4e69ac;
+	color: white;
+	font-size: 30px;
+	font-weight: bolder;
+	line-height: 35px;
+	text-align: center;
+}
+.login {
+	display: inline-block;
+	float: left;
+	height: 35px;
+	padding-left: 35px;
+	color: white;
+	font-size: 14px;
+	font-weight: bolder;
+	line-height: 35px;
+	text-decoration: none;
+	text-align: center;
 }
