--- a/GoIT/html/homework/hw6/css/style.css
+++ b/GoIT/html/homework/hw6/css/style.css
@@ -18,9 +18,8 @@ body {
 .container {
 	position: relative;
 	margin: 0 auto;
-	margin-top: 1px;
-	width: 1000px;
-	
+	margin-top: -1px;
+	width: 1000px;	
 }
 /*HEADER*/
 header {
@@ -343,8 +342,8 @@ nav a {
 }
 .sidebar_left ul a:hover {
     color: #0c3256;
-    font-style: oblique;
-    font-size: 13.5px;
+    font-style: italic;
+    font-size: 14px;
     border-bottom: 2px solid #0c3256;
     padding-top: 2.5px;
     
@@ -375,7 +374,7 @@ nav a {
 	text-align: center;
 	letter-spacing: 0.3px;
 	color: #206988;
-	text-shadow: 0px 1px 0px rgba(17, 65, 101, 1);
+	
 }
 .model_1 {
 	display: block;
@@ -408,7 +407,7 @@ nav a {
 	font-style: italic;
 	font-size: 16px;
 	color: #114165;
-	text-shadow: 1px 0px 0px rgba(17, 65, 101, 1);
+	
 }
 /*PRODUCT 2 COLUMN*/
 .product_2_column {
@@ -427,7 +426,7 @@ nav a {
 	margin-left: 4px;
 	letter-spacing: 0.7px;
 	color: #206988;
-	text-shadow: 0px 1px 0px rgba(17, 65, 101, 1);
+	
 
 }
 .model_2 {
@@ -461,7 +460,7 @@ nav a {
 	font-style: italic;
 	font-size: 16px;
 	color: #114165;
-	text-shadow: 1px 0px 0px rgba(17, 65, 101, 1);
+	
 }
 /*PRODUCKT 3 COLUMN*/
 .product_3_column {
@@ -481,7 +480,7 @@ nav a {
 	letter-spacing: 1px;
 	font-size: 15px;
 	color: #206988;
-	text-shadow: 0px 1px 0px rgba(17, 65, 101, 1);
+	
 }
 .model_3 {
 	display: block;
@@ -512,7 +511,7 @@ nav a {
 	font-style: italic;
 	font-size: 16px;
 	color: #114165;
-	text-shadow: 1px 0px 0px rgba(17, 65, 101, 1);
+	
 }
 .row_2 {
 	margin-top: 15px;
