--- a/GoIT/javascript/lessons 7-8/form/css/style.css
+++ b/GoIT/javascript/lessons 7-8/form/css/style.css
@@ -2,18 +2,27 @@
 	margin-top: 40px;
 }
 .field {
+	width: 500px;
 	margin-left: 10px;
-	margin-top: 5px;
+	margin-top: 12px;
 }
-.text__2 {
+.text {
+	display: inline-block;
+}
+.text--2 {
 	margin-left: 2px;
 }
-.text__3 {
+.text--3 {
 	margin-left: 12px;
 }
-.label {	
-	display: none;
+.hint {	
 	box-shadow: 0px 0px 2px 2px rgba(0,0,0,1);
 	border: 2px solid silver;
 	padding: 3px;
+}
+.submit {
+	margin: 10px;
+	width: 240px;
+	height: 30px;
+	background-color: yellow;
 }
