--- a/GoIT/javascript/lessons 13-14/css/style.css
+++ b/GoIT/javascript/lessons 13-14/css/style.css
@@ -50,14 +50,15 @@ body {
   text-align: center;
   background: white;
   line-height: 350px;
-  color: #000;
+  color: black;
   font-size: 36px;
   width: 50%;
   height: 400px;
   top: 20%;
   left: 25%;
-  border-radius: 3px;
-  border: 1px solid #fff;
+  border-radius: 30px;
+  border: 1px solid black;
+  background-color: #cfe2f3;
   box-shadow: 0 0 1px 2px rgba(255,255,255,0.5);
 }
 .back--modal{
